compiler/fir/analysis-tests/testData/resolve/checkers/useBeforeStaticInitialization/topLevelCyclicDependency.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
<!UNINITIALIZED_PROPERTY!>val a = <!UNINITIALIZED_ACCESS("val b: Any")!>A.b<!><!>

<!POSSIBLE_INITIALIZATION_DEADLOCK!>object A<!> {
    <!UNINITIALIZED_PROPERTY!>val b: Any = <!UNINITIALIZED_ACCESS("val a: Any")!>a<!><!>
}
